--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #e0f7fa; /* Cor de fundo suave */
+  background: url("https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"); /* Cor de fundo suave */
 }
 
 .container {
-  background-color: #ffffff; /* Fundo branco */
+  background-color: rgba(255, 255, 255, 0.7); /* Branco com opacidade de 70% */
   padding: 25px;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* Sombra suave */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8); /* Sombra suave */
+  backdrop-filter: blur(2px); /* Efeito de desfoque */
+  -webkit-backdrop-filter: blur(5px); /* Suporte para Safari */
   text-align: center;
   width: 100%;
   max-width: 350px;
